Cập nhật chức năng mới từ tân